@@ -21,6 +21,7 @@ Released ?????? ??, ????
 - Canada updates (dr-p)
 - PRTE (PortugalExt) fix (dr-p)
 - Norway updates (dr-p)
+- Chile updates (dr-p)
 - README iso codes typo / improvements (dr-p)
 
 Version 0.11.2
